corrected headline alignment on crew page

--- a/assets/scss/_7_pages/_crew.scss
+++ b/assets/scss/_7_pages/_crew.scss
@@ -39,7 +39,7 @@ body#crew {
             margin-left: 38px;
             position: absolute;
             top: 65px;
-            left: 100px;
+            left: 50px;
 
             @include breakpoint(portrait) {
                 position: inherit;
